--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "firebase": "^9.8.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-bootstrap": "^2.4.0",
